set up my config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,10 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Hello Susan's World!
+subtitle: When I met the developer World
 simple_search: https://www.google.com/search
-description:
+description: A blog created for the randomness in the tech's world.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
