add extra changes to blog

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://supzann3.github.io
 title: Hello Susan's World!
-subtitle: When I met the developer World
+subtitle: Girl meets tech's world
 simple_search: https://www.google.com/search
 description: A blog created for the randomness in the tech's world.
 
